basic start of a teleport spell casting effect